--- a/css/widget.css
+++ b/css/widget.css
@@ -327,7 +327,7 @@ aside .widget h2:before, .sidebar .widget h2:before {
 
 .widget-recentpost ul {
     float: left;
-    width: 100 #;
+    width: 100%;
     margin: 0px;
     padding: 0px;
     list-style: none;
