--- a/css/themetypo.css
+++ b/css/themetypo.css
@@ -1,9 +1,9 @@
-@import url(http://fonts.googleapis.com/css?family=Exo:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900italic,900&amp;subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=Lato:400,100,100italic,300italic,300,400italic,700,700italic,900,900italic&amp;subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700italic,700&amp;subset=latin,cyrillic-ext,latin-ext,cyrillic);
-@import url(http://fonts.googleapis.com/css?family=Hammersmith+One&amp;subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700&amp;subset=latin,latin-ext);
-@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700,500,600);
+@import url(https://fonts.googleapis.com/css?family=Exo:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900italic,900&amp;subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300italic,300,400italic,700,700italic,900,900italic&amp;subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700italic,700&amp;subset=latin,cyrillic-ext,latin-ext,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=Hammersmith+One&amp;subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700&amp;subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700,500,600);
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
     border: 0;
